--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,18 @@ code {
   outline: none;
   text-align: center;
 }
+
+#submit-button {
+  background-color: white;
+  border: none;
+  padding: 0;
+  font-size: 16pt;
+}
+
+#submit-button:focus {
+  outline: none;
+}
+
+#submit-button:hover {
+  cursor: pointer;
+}
